@@ -77,8 +77,9 @@
 
 - Fixed buffer overflow in build_plain() function
 - Fixed buffer overflow in mp_add_cs_buf() function
-- Fixed copy/paste error leading to invalid "Integer overflow detected in keyspace of mask" in attack-mode 6 and 7
 - Fixed calculation of brain-session ID, only the first hash of the hashset was taken into account
+- Fixed cleanup of password candidate buffers on GPU set from autotune in case -n was used
+- Fixed copy/paste error leading to invalid "Integer overflow detected in keyspace of mask" in attack-mode 6 and 7
 - Fixed cracking multiple Office hashes (modes 9500, 9600) with the same salt
 - Fixed cracking of Blockchain, My Wallet (V1 and V2) hashes with unexpected decrypted data
 - Fixed cracking of Cisco-PIX and Cisco-ASA MD5 passwords in mask-attack mode if mask > length 16
@@ -100,9 +101,9 @@
 - Fixed race condition in maskfile mode by using a dedicated flag for restore execution
 - Fixed some memory leaks in case hashcat is shutting down due to some file error
 - Fixed some memory leaks in case mask-files are used in optimized mode
+- Fixed --status-json to correctly escape certain characters in hashes
 - Fixed the 7-Zip parser to allow the entire supported range of encrypted and decrypted data lengths
 - Fixed the validation of the --brain-client-features command line argument (only values 1, 2 or 3 are allowed)
-- Fixed --status-json to correctly escape certain characters in hashes
 
 ##
 ## Improvements
